refactor: CHighlightSearchSettings for clarity and update deprecated Integer usage
- Improve Javadoc comments for CHighlightSearchSettings constructor
- Rename settingsObj to settings for consistency and clarity
- Replace deprecated Integer(int) constructor with Integer.valueOf(int)
- Add inline comments to explain key sections of the code
- Ensure consistent indentation and spacing

See issue #501